# ProjectTemplate

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.ps1  build.sh
cmake/: AddCatch2.cmake  AddTrompeloeil.cmake
include/detail/: ErrHandler.hpp  Precompiled.hpp  StringUtils.hpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
test/: CMakeLists.txt  lib_Tests.cpp
tests/: CMakeLists.txt
